--- a/app/src/main/res/layout/listitem.xml
+++ b/app/src/main/res/layout/listitem.xml
@@ -1,59 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:padding="1dp">
 
 
-<android.support.v7.widget.CardView
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_view"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    card_view:cardCornerRadius="10dp">
+    <android.support.v7.widget.CardView
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin">
-
-    <ImageView
-        android:id="@+id/postThumb"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginRight ="5dp"/>
-
-    <TextView
-        android:id = "@+id/postTitleLabel"
-        android:layout_width="0dp"
+        android:id="@+id/card_view"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@id/postThumb"
-        android:layout_toRightOf="@id/postThumb"
-        android:maxLines="2"
-        android:text ="Mon Tritre Sur 2 ligne"
-        android:textIsSelectable="false"
-        android:textSize="16sp"
-        android:ellipsize="end"
-        android:textColor="#ff000000" />
+        card_view:cardCornerRadius="10dp">
 
-    <TextView
-        android:id = "@+id/postDateLabel"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignBottom="@id/postThumb"
-        android:layout_toRightOf="@id/postThumb"
-        android:maxLines="1"
-        android:text ="Febuary 02, 2016"
-        android:textIsSelectable="false"
-        android:textSize="12sp"
-        android:textColor="#ff000000" />
+        <RelativeLayout
 
-</RelativeLayout>
-</android.support.v7.widget.CardView>
-    </LinearLayout>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin">
+
+            <ImageView
+                android:id="@+id/postThumb"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginRight="5dp" />
+
+            <TextView
+                android:id="@+id/postTitleLabel"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_alignTop="@id/postThumb"
+                android:layout_toRightOf="@id/postThumb"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:textColor="#ff000000"
+                android:textIsSelectable="false"
+                android:textSize="16sp"
+                tools:text="Mon Tritre Sur 2 ligne" />
+
+            <TextView
+                android:id="@+id/postDateLabel"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@id/postThumb"
+                android:layout_alignParentRight="true"
+                android:layout_toRightOf="@id/postThumb"
+                android:maxLines="1"
+                android:textColor="#ff000000"
+                android:textIsSelectable="false"
+                android:textSize="12sp"
+                tools:text="Febuary 02, 2016" />
+
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+</LinearLayout>
