--- a/app/src/main/res/layout/listitem.xml
+++ b/app/src/main/res/layout/listitem.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="1dp">
-
+    <!-- la reponse est ici http://developer.android.com/training/improving-layouts/reusing-layouts.html -->
 
     <android.support.v7.widget.CardView
 
