--- a/app/src/main/res/layout/post_detailled_layout.xml
+++ b/app/src/main/res/layout/post_detailled_layout.xml
@@ -38,7 +38,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/PostDescritpion"
+        android:id="@+id/PostDescription"
         android:textIsSelectable="false"
         android:textSize="16sp"
         android:text ="Description"
