--- a/app/src/main/res/layout/post_detailled_layout.xml
+++ b/app/src/main/res/layout/post_detailled_layout.xml
@@ -13,10 +13,10 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/PostTitre"
-    android:text ="Mon Titre"
     android:textIsSelectable="false"
     android:textSize="18sp"
-    android:layout_gravity="center_horizontal" />
+    android:layout_gravity="center_horizontal"
+    android:textColor="#000000" />
 
 
     <ImageView
@@ -33,7 +33,8 @@
         android:text ="Date"
         android:textIsSelectable="false"
         android:textSize="12sp"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:textColor="#000000" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -41,9 +42,8 @@
         android:id="@+id/PostDescription"
         android:textIsSelectable="false"
         android:textSize="16sp"
-        android:text ="Description"
         android:layout_gravity="center_horizontal"
-        />
+        android:textColor="#000000" />
 
 
 
