--- a/app/src/main/res/layout/listitem.xml
+++ b/app/src/main/res/layout/listitem.xml
@@ -6,17 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="1dp">
-    <!-- la reponse est ici http://developer.android.com/training/improving-layouts/reusing-layouts.html -->
 
     <android.support.v7.widget.CardView
-
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         card_view:cardCornerRadius="10dp">
 
         <RelativeLayout
-
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="@dimen/activity_vertical_margin"
@@ -41,8 +38,7 @@
                 android:maxLines="2"
                 android:textColor="#ff000000"
                 android:textIsSelectable="false"
-                android:textSize="16sp"
-                tools:text="Mon Tritre Sur 2 ligne" />
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/postDateLabel"
@@ -54,8 +50,7 @@
                 android:maxLines="1"
                 android:textColor="#ff000000"
                 android:textIsSelectable="false"
-                android:textSize="12sp"
-                tools:text="Febuary 02, 2016" />
+                android:textSize="12sp"/>
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
