--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,3 @@
 <resources>
-
-    <!-- Base application theme. -->
-    <style name="AppTheme">
-        <!-- Customize your theme here. -->
-    </style>
-
+    <style name="AppTheme" parent="Theme.AppCompat"></style>
 </resources>
